feat: add adaptive to burger

--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -24,12 +24,12 @@
                     </div>
                     <nav class="container-nav">
                         <ul class="navigation">
-                            <li class="navigation-item"><a data-goto=".visiting" href="#Visiting">Visiting</a></li>
-                            <li class="navigation-item"><a data-goto=".explore" href="#Explore">Explore</a></li>
-                            <li class="navigation-item"><a data-goto=".video" href="#Video">Video</a></li>
-                            <li class="navigation-item"><a data-goto=".gallery" href="#Gallery">Gallery</a></li>
-                            <li class="navigation-item"><a data-goto=".tickets" href="#Tickets">Tickets</a></li>
-                            <li class="navigation-item"><a data-goto=".contacts" href="#Contacts">Contacts</a></li>
+                            <li><a class="navigation-item" data-goto=".visiting" href="#Visiting">Visiting</a></li>
+                            <li><a class="navigation-item" data-goto=".explore" href="#Explore">Explore</a></li>
+                            <li><a class="navigation-item" data-goto=".video" href="#Video">Video</a></li>
+                            <li><a class="navigation-item" data-goto=".gallery" href="#Gallery">Gallery</a></li>
+                            <li><a class="navigation-item" data-goto=".tickets" href="#Tickets">Tickets</a></li>
+                            <li><a class="navigation-item" data-goto=".contacts" href="#Contacts">Contacts</a></li>
                         </ul>
                     </nav>
                     <div class="menu-burger">
