feat:add adaptive to burger

--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -102,6 +102,43 @@
                     </div>
                 </div>
             </div>
+            <div class="burger-container">
+                <div class="burger-wrapper">
+                    <nav class="container-nav__burger">
+                        <ul class="navigation-burger">
+                            <li><a class="navigation-item__burger" data-goto=".visiting" href="#Visiting">Visiting</a></li>
+                            <li><a class="navigation-item__burger" data-goto=".explore" href="#Explore">Explore</a></li>
+                            <li><a class="navigation-item__burger" data-goto=".video" href="#Video">Video</a></li>
+                            <li><a class="navigation-item__burger" data-goto=".gallery" href="#Gallery">Gallery</a></li>
+                            <li><a class="navigation-item__burger" data-goto=".tickets" href="#Tickets">Tickets</a></li>
+                            <li><a class="navigation-item__burger" data-goto=".contacts" href="#Contacts">Contacts</a></li>
+                        </ul>
+                    </nav>
+                    <div class="burger-images">
+                        <div class="image-item">
+                            <img src="assets/images/jpg/burger/image1.jpg" alt="image1">
+                            <img src="assets/images/jpg/burger/image1-1.jpg" alt="image1">
+                        </div>
+                        <div class="image-item">
+                            <img src="assets/images/jpg/burger/image2.jpg" alt="image2">
+                            <img src="assets/images/jpg/burger/image2-2.jpg" alt="image2">
+                        </div>
+                        <div class="image-item">
+                            <img src="assets/images/jpg/burger/image3.jpg" alt="image3">
+                            <img src="assets/images/jpg/burger/image3-3.jpg" alt="image3">
+                        </div>
+                    </div>
+                    <div class="social-container">
+                        <ul class="social">
+                            <li class="social-item"><a href="#"><img src="assets/images/svg/youtube.svg" alt="Youtube"></a></li>
+                            <li class="social-item"><a href="#"><img src="assets/images/svg/instagram.svg" alt="Instagram"></a></li>
+                            <li class="social-item"><a href="#"><img src="assets/images/svg/facebook.svg" alt="Faebook"></a></li>
+                            <li class="social-item"><a href="#"><img src="assets/images/svg/twitter.svg" alt="Twitter"></a></li>
+                            <li class="social-item"><a href="#"><img src="assets/images/svg/pinterest.svg" alt="Pinterest"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="virtual-tour" id="Visiting">
             <div class="wrapper">
