--- a/museum-dom/index.html
+++ b/museum-dom/index.html
@@ -338,21 +338,21 @@
                         </div>
                         <div class="picture-container">
                             <div class="picture-inner-container">
-                                <img src="assets/images/jpg/Gallery/optima/galery2.jpg" alt="Gallery image 2">
-                                <img src="assets/images/jpg/Gallery/optima/galery9.jpg" alt="Gallery image 9">
-                                <img src="assets/images/jpg/Gallery/optima/galery4.jpg" alt="Gallery image 4">
-                                <img src="assets/images/jpg/Gallery/optima/galery6.jpg" alt="Gallery image 6">
-                                <img src="assets/images/jpg/Gallery/optima/galery11.jpg" alt="Gallery image 11">
-                                <img src="assets/images/jpg/Gallery/optima/galery1.jpg" alt="Gallery image 1">
-                                <img src="assets/images/jpg/Gallery/optima/galery8.jpg" alt="Gallery image 8">
-                                <img src="assets/images/jpg/Gallery/optima/galery3.jpg" alt="Gallery image 3">
-                                <img src="assets/images/jpg/Gallery/optima/galery5.jpg" alt="Gallery image 5">
-                                <img src="assets/images/jpg/Gallery/optima/galery13.jpg" alt="Gallery image 13">
-                                <img src="assets/images/jpg/Gallery/optima/galery7.jpg" alt="Gallery image 7">
-                                <img src="assets/images/jpg/Gallery/optima/galery10.jpg" alt="Gallery image 10">
-                                <img src="assets/images/jpg/Gallery/optima/galery15.jpg" alt="Gallery image 15">
-                                <img src="assets/images/jpg/Gallery/optima/galery12.jpg" alt="Gallery image 12">
-                                <img src="assets/images/jpg/Gallery/optima/galery14.jpg" alt="Gallery image 14">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery2.jpg" alt="Gallery image 2">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery9.jpg" alt="Gallery image 9">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery4.jpg" alt="Gallery image 4">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery6.jpg" alt="Gallery image 6">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery11.jpg" alt="Gallery image 11">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery1.jpg" alt="Gallery image 1">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery8.jpg" alt="Gallery image 8">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery3.jpg" alt="Gallery image 3">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery5.jpg" alt="Gallery image 5">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery13.jpg" alt="Gallery image 13">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery7.jpg" alt="Gallery image 7">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery10.jpg" alt="Gallery image 10">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery15.jpg" alt="Gallery image 15">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery12.jpg" alt="Gallery image 12">
+                                <img class="image" src="assets/images/jpg/Gallery/optima/galery14.jpg" alt="Gallery image 14">
                             </div>
                             <div class="gradient-container"></div>
                         </div>
