feat: add audio player

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -15,8 +15,12 @@
         <button class="play-prev player-icon"></button>
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
+        <input type="range" value="25" min="0" max="100" step="1" class="audio-line">
+        <div class="audio-time">00:00</div>
       </div>
-      <ul class="play-list"></ul>
+      <audio src="https://docs.google.com/uc?export=download&id=1s2wrvb739rPWRVCrqrVzogqBOVkqrFTS"></audio>
+      <ul class="play-list">
+      </ul>
     </div>
     <div class="weather">
       <input type="text" class="city" placeholder="Enter sity">
