--- a/momentum/index.html
+++ b/momentum/index.html
@@ -15,8 +15,13 @@
         <button class="play-prev player-icon"></button>
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
-        <input type="range" value="25" min="0" max="100" step="1" class="audio-line">
-        <div class="audio-time">00:00</div>
+        <div class="progress-container">
+          <input type="range" value="25" min="0" max="100" step="1" class="audio-line">
+          <div class="track-title"></div>
+        </div>
+        <div class="audio-time">00:00 / 00:00</div>
+        <button class="microphone"></button>
+        <input type="range" value="43" min="0" max="100" class="volume-line">
       </div>
       <audio src="https://docs.google.com/uc?export=download&id=1s2wrvb739rPWRVCrqrVzogqBOVkqrFTS"></audio>
       <ul class="play-list">
