--- a/news-JS/src/index.html
+++ b/news-JS/src/index.html
@@ -11,7 +11,10 @@
             <h1>News Portal</h1>
         </header>
         <main>
-            <div class="sources buttons"></div>
+            <div class="sources buttons">
+                <div class="sources-bg-top"></div>
+                <div class="sources-bg-bottom"></div>
+            </div>
             <div class="news"></div>
         </main>
         <footer>
