fix: add links to footer

--- a/news-JS/src/index.html
+++ b/news-JS/src/index.html
@@ -18,9 +18,14 @@
             <div class="news"></div>
         </main>
         <footer>
-            <p class="copyright">
-                Copyright <a href="https://newsapi.org">NewsAPI</a>
-            </p>
+            <div class="footer-container">
+                <a class="rs-link" href="https://rs.school/js/"></a>
+                <p class="copyright">
+                    Copyright <a href="https://newsapi.org">NewsAPI</a>
+                </p>
+                <p class="webdev">App developer: Bogdan Samonov<span>2021</span></p>
+                <a class="github-link" href="https://github.com/Bogdan-VS"></a>
+            </div>
         </footer>
 
         <template id="sourceItemTemp">
