feat: add logic to shape fiter

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -58,27 +58,27 @@
                   <h3>Форма</h3>
                   <div class="form-container">
                     <div class="form-item">
-                      <div class="form-icon icon-1"></div>
-                      <p class="icon-name">Колокол</p>
+                      <div class="form-icon icon-1 form-icon__active" data-form="колокольчик"></div>
+                      <p class="icon-name">Колокольчик</p>
                     </div>
                     <div class="form-item">
-                      <div class="form-icon icon-2"></div>
+                      <div class="form-icon icon-2 form-icon__active" data-form="шар"></div>
                       <p class="icon-name">Шар</p>
                     </div>
                     <div class="form-item">
-                      <div class="form-icon icon-3"></div>
+                      <div class="form-icon icon-3 form-icon__active" data-form="шишка"></div>
                       <p class="icon-name">Шишка</p>
                     </div>
                     <div class="form-item">
-                      <div class="form-icon icon-4"></div>
+                      <div class="form-icon icon-4 form-icon__active" data-form="звезда"></div>
                       <p class="icon-name">Звезда</p>
                     </div>
                     <div class="form-item">
-                      <div class="form-icon icon-5"></div>
+                      <div class="form-icon icon-5 form-icon__active" data-form="снежинка"></div>
                       <p class="icon-name">Снежинка</p>
                     </div>
                     <div class="form-item">
-                      <div class="form-icon icon-6"></div>
+                      <div class="form-icon icon-6 form-icon__active" data-form="фигурка"></div>
                       <p class="icon-name">Фигурка</p>
                     </div>
                   </div>
@@ -135,8 +135,8 @@
                 </div>
     
                 <div class="sucsses">
-                  <button class="apply-btn apply-filter">Применить фильтры</button>
-                  <button class="apply-btn apply-settings">Сбросить фильтры</button>
+                  <button class="apply-btn apply-filter" id="apply-filter">Применить фильтры</button>
+                  <button class="apply-btn apply-settings" id="apply-settings">Сбросить фильтры</button>
                 </div>
 
               </div>
