feat: add logic for saving in LocalStorage

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -101,15 +101,15 @@
                   <h3>Размер</h3>
                   <div class="size-container">
                     <label class="container-item">
-                      <input type="checkbox" name="little" id="little" checked class="size-item" data-size="большой">
+                      <input type="checkbox" name="little" id="little" checked class="size-item checked" data-check="большой">
                       Большой
                     </label>
                     <label class="container-item">
-                      <input type="checkbox" name="average" id="average" checked class="size-item" data-size="средний">
+                      <input type="checkbox" name="average" id="average" checked class="size-item checked" data-check="средний">
                       Средний
                     </label>
                     <label class="container-item">
-                      <input type="checkbox" name="big" id="big" checked class="size-item" data-size="малый">
+                      <input type="checkbox" name="big" id="big" checked class="size-item checked" data-check="малый">
                       Малый
                     </label>
                   </div>
@@ -117,13 +117,13 @@
     
                 <div class="favorite">
                   <label class="container-favorite">
-                    <input type="checkbox" name="little" id="little" class="favorite-item" data-favorite="true">
+                    <input type="checkbox" name="little" id="little" class="favorite-item checked" data-check="true">
                     Только любимые
                   </label>
                 </div>
     
                 <div class="sucsses">
-                  <button class="apply-btn apply-settings" id="apply-settings">Сбросить фильтры</button>
+                  <button class="apply-btn apply-settings" id="reset-filters">Сбросить фильтры</button>
                   <button class="apply-btn apply-filter" id="apply-filter">Сбросить настройки</button>
                 </div>
 
