--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -29,7 +29,7 @@
                   <button class="snow" id="snow"></button>
                   <div class="search">
                     <input type="text" name="search" id="search" placeholder="Поиск" autocomplete="off" class="search-item">
-                    <div class="search-icon"></div>
+                    <div class="clean-icon"></div>
                   </div>
                 </div>
     
@@ -124,7 +124,7 @@
     
                 <div class="sucsses">
                   <button class="apply-btn apply-settings" id="reset-filters">Сбросить фильтры</button>
-                  <button class="apply-btn apply-filter" id="apply-filter">Сбросить настройки</button>
+                  <button class="apply-btn apply-filter" id="reset-setting">Сбросить настройки</button>
                 </div>
 
               </div>
