fix: change logic to search

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -39,8 +39,10 @@
                     <p data-sort="Все игрушки" id="current-categories">Все игрушки</p>
                     <button class="choose-item"></button>
                     <div class="all-item hide" id="open-category">
-                      <p class="sort-item" data-sort="По имени">По имени</p>
-                      <p class="sort-item" data-sort="По году выпуска">По году выпуска</p>
+                      <p class="sort-item" data-sort="По имени А-Я">По имени А-Я</p>
+                      <p class="sort-item" data-sort="По имени Я-А">По имени Я-А</p>
+                      <p class="sort-item" data-sort="По возрастанию года выпуска">По возрастанию года выпуска</p>
+                      <p class="sort-item" data-sort="По убыванию года выпуска">По убыванию года выпуска</p>
                       <p class="sort-item" data-sort="Все игрушки">Все игрушки</p>
                     </div>
                   </div>
